fix: string concatenation
- remove auto-space in string concatenation
- fix web not showing multiple spaces

--- a/web/src/main.css
+++ b/web/src/main.css
@@ -72,4 +72,5 @@ footer {
 #out p {
   padding: 0;
   margin: 0;
+  white-space: pre;
 }
